--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,75 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  z-index: 0;
+}
+/* #region welcome page */
+#welcome-message {
+  z-index: 2;
+  top: 0vh;
+  right: 50vw;
+  transform: translate(50%);
+  position: fixed;
+
+  height: 8%;
+  width: 30%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* border: solid 1px red; */
+  background-color: aquamarine;
+  border-radius: 0px 0px 10px 10px;
+}
+
+#welcome-div {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0vh;
+}
+
+.welcome-clickable {
+  z-index: 1;
+  width: 50em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#owner-clickable {
+  opacity: 1.0;
+  background-color: lightpink;
+}
+
+#owner-clickable:hover {
+  opacity: 0.7;
+}
+
+#doctor-clickable {
+  opacity: 1.0;
+  background-color: lavender;
+}
+
+#doctor-clickable:hover {
+  opacity: 0.7;
+}
+
+#owner-img {
+  position: fixed;
+  height: 100vh;
+  right: 50vw;
+}
+
+#doc-img {
+  position: fixed;
+  height: 100vh;
+  left: 50vw;
+}
+
+/* #endregion */
+
