--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,12 @@ code {
 * {
   z-index: 0;
 }
+
+button {
+  padding: 12px;
+  border-radius: 8px;
+}
+
 /* #region welcome page */
 #welcome-message {
   z-index: 2;
@@ -83,3 +89,64 @@ code {
 
 /* #endregion */
 
+/* #region logins */
+#owner-login-page {
+  background-color: lightpink;
+}
+
+#doctor-login-page {
+  background-color: lavender;
+}
+
+.login-page {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  align-items: center;
+}
+
+.form-div {
+  position: fixed;
+  right: 50vw;
+  transform: translate(50%);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: aliceblue;
+  border-radius: 20px;
+  padding: 35px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+/* #endregion */
+
+/* #region text inputs */
+
+input {
+  border-left: 2px solid;
+  border-right: 2px solid;
+  border-top: 0px;
+  border-bottom: 0px;
+  padding: 12px;
+}
+
+.top-input {
+  border: solid 2px;
+  border-bottom: 0px;
+  border-radius: 8px 8px 0px 0px;
+}
+
+.bottom-input {
+  border: solid 2px;
+  border-top: 0px;
+  border-radius: 0px 0px 8px 8px;
+}
+
+/* #endregion */
