--- a/client/src/index.css
+++ b/client/src/index.css
@@ -204,11 +204,11 @@ input {
   align-content: space-around;
   justify-content: space-around;
 
-  height: 100vh;
+  height: fit-content;
   width: 75vw;
   background-color: aliceblue;
 
-  position: fixed;
+  position: absolute;
   right: 0%;
   top: 0%;
 }
